src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CPBase__Restrict_Assignment_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field restricts a contacts ability to see other contacts related to this account when purchasing items that have assignments enabled.</description>
        <inlineHelpText>This field restricts a contacts ability to see other contacts related to this account when purchasing items that have assignments enabled.</inlineHelpText>
        <label>Restrict Assignment Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DNB_D_U_N_S_Number__c</fullName>
        <description>Upon successful match, Optimizer populates this field and references it for future refreshes. The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>Upon successful match, Optimizer populates this field and references it for future refreshes. It is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity based on the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D&amp;B DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBCompanyRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Account record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Account record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>AccountToDnB</label>
        <referenceTo>DNBoptimizer__DnBCompanyRecord__c</referenceTo>
        <relationshipLabel>AccountToDnB</relationshipLabel>
        <relationshipName>AccountToDnB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_B_Optimizer_field_reference__c</fullName>
        <description>D&amp;B Optimizer field reference</description>
        <label>Business Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Directory_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Declaration for the record to be removed from all directories.</description>
        <inlineHelpText>Declaration for the record to be removed from all directories.</inlineHelpText>
        <label>Directory Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Accepts_Unsolicited_Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not philanthropic entities accept unsolicited proposals.</description>
        <inlineHelpText>Indicates whether or not philanthropic entities accept unsolicited proposals.</inlineHelpText>
        <label>Accepts Unsolicited Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Active_Recurring_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated Fields** Automatically flagged to true when the account is related to an active recurring gift.</description>
        <inlineHelpText>**System Calculated Fields** Automatically flagged to true when the account is related to an active recurring gift.</inlineHelpText>
        <label>Active Recurring Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Annual_Giving_Total__c</fullName>
        <description>A range of values available to quickly classify philanthropic entities by annual giving totals to all grantees. Useful for projecting grant application amounts.</description>
        <inlineHelpText>A range of values available to quickly classify philanthropic entities by annual giving totals to all grantees. Useful for projecting grant application amounts.</inlineHelpText>
        <label>Annual Giving Total</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $100k</fullName>
                </value>
                <value>
                    <fullName>$100k - $500k</fullName>
                </value>
                <value>
                    <fullName>$500k - $1mil.</fullName>
                </value>
                <value>
                    <fullName>$1mil. - $3mil.</fullName>
                </value>
                <value>
                    <fullName>$3mil. - $5mil.</fullName>
                </value>
                <value>
                    <fullName>$5mil. - $10mil.</fullName>
                </value>
                <value>
                    <fullName>$10mil. - $25mil.</fullName>
                </value>
                <value>
                    <fullName>$25mil. - $50mil.</fullName>
                </value>
                <value>
                    <fullName>$50mil. - $100mil.</fullName>
                </value>
                <value>
                    <fullName>$100mil. - $500mil.</fullName>
                </value>
                <value>
                    <fullName>More than $500mil.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Auto_Calculate_Household_Greetings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If flagged as true the account will automatically update the household greetings based on DonorNation&apos;s default household greeting format.</description>
        <inlineHelpText>If flagged as true the account will automatically update the household greetings based on DonorNation&apos;s default household greeting format.</inlineHelpText>
        <label>Auto Calculate Household Greetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Classification__c</fullName>
        <description>Classifies the account as a business organization or household.</description>
        <inlineHelpText>Classifies the account as a business organization or household.</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not solicit this organization for donations/grants.</description>
        <inlineHelpText>Do not solicit this organization for donations/grants.</inlineHelpText>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__First_Gift_Date__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Funding_Cycle__c</fullName>
        <description>Indicates how often a philanthropic entity accepts LOIs/Proposals.</description>
        <inlineHelpText>Indicates how often a philanthropic entity accepts LOIs/Proposals.</inlineHelpText>
        <label>Funding Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Biannual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Opportunities__c</fullName>
        <description>**System Calculated Field** Counts the number of related gift opportunities.</description>
        <inlineHelpText>**System Calculated Field** Counts the number of related gift opportunities.</inlineHelpText>
        <label>Gift Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Outstanding__c</fullName>
        <description>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Scheduled&quot;.</description>
        <inlineHelpText>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Scheduled&quot;.</inlineHelpText>
        <label>Gifts Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Received__c</fullName>
        <description>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Collected&quot;.</description>
        <inlineHelpText>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Collected&quot;.</inlineHelpText>
        <label>Gifts Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Value__c</fullName>
        <formula>DonorApi__Gifts_Received__c + DonorApi__Gifts_Outstanding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifts Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gives_Anonymously__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not philanthropic entities give anonymously for ALL Donations associated with them.</description>
        <inlineHelpText>Indicates whether or not philanthropic entities give anonymously for ALL Donations associated with them.</inlineHelpText>
        <label>Gives Anonymously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Has_Open_Gift_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated Field** Automatically flagged to true when the account has an open gift opportunity.</description>
        <inlineHelpText>**System Calculated Field** Automatically flagged to true when the account has an open gift opportunity.</inlineHelpText>
        <label>Has Open Gift Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Default_Greeting_Type__c</fullName>
        <description>*DO NOT CHANGE*</description>
        <inlineHelpText>*DO NOT CHANGE*</inlineHelpText>
        <label>Household Default Greeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household Informal Greeting</fullName>
                    <default>true</default>
                    <label>Household Informal Greeting</label>
                </value>
                <value>
                    <fullName>Household Formal Greeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Default_Greeting__c</fullName>
        <description>**System Calculated Field** Automatically sets the default greeting for the household based upon the selected value in the Household Default Greeting Type picklist.</description>
        <formula>IF(ISPICKVAL(DonorApi__Household_Default_Greeting_Type__c,&quot;Household Informal Greeting&quot;), DonorApi__Household_Informal_Greeting__c, 
IF(ISPICKVAL(DonorApi__Household_Default_Greeting_Type__c,&quot;Household Formal Greeting&quot;), DonorApi__Household_Formal_Greeting__c, DonorApi__Household_Informal_Greeting__c))</formula>
        <inlineHelpText>**System Calculated Field** Automatically sets the default greeting for the household based upon the selected value in the Household Default Greeting Type picklist.</inlineHelpText>
        <label>Household Default Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Email__c</fullName>
        <label>Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Formal_Greeting__c</fullName>
        <label>Household Formal Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Household_Informal_Greeting__c</fullName>
        <label>Household Informal Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Largest_Gift__c</fullName>
        <description>**System Calculated Field** Calculates the largest gift amount from all related gifts.</description>
        <inlineHelpText>**System Calculated Field** Calculates the largest gift amount from all related gifts.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Last_Gift_Amount__c</fullName>
        <description>**System Calculated Field** Calculates the amount of the last gift from the account&apos;s related gifts list.</description>
        <inlineHelpText>**System Calculated Field** Calculates the amount of the last gift from the account&apos;s related gifts list.</inlineHelpText>
        <label>Last Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Last_Gift_Date__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Matches_Employee_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this organization match employee gifts?</description>
        <inlineHelpText>Does this organization match employee gifts?</inlineHelpText>
        <label>Matches Employee Giving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Next_Funding_Cycle_Month__c</fullName>
        <description>What is the (next) month a proposal/LOI is due to this philanthropic entity?</description>
        <inlineHelpText>What is the (next) month a proposal/LOI is due to this philanthropic entity?</inlineHelpText>
        <label>Next Funding Cycle Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Num_Open_Gift_Opportunities__c</fullName>
        <description>**System Calculated Field** Calculates the total number of open gift opportunities related to the account.</description>
        <inlineHelpText>**System Calculated Field** Calculates the total number of open gift opportunities related to the account.</inlineHelpText>
        <label>Num Open Gift Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DonorApi__Organizational_Recognition_Name__c</fullName>
        <description>If this organization/philanthropic entity gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</description>
        <inlineHelpText>If this organization/philanthropic entity gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</inlineHelpText>
        <label>Organizational Recognition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Primary_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary relationship manage for this con..... to be done later.</inlineHelpText>
        <label>Primary Relationship Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Relationship Manager)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorDrive_ID_aacr__c</fullName>
        <label>DonorDrive ID aacr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Type_Override_Reason__c</fullName>
        <label>Institution Type Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Type_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Institution Type Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <description>Institution Types</description>
        <inlineHelpText>Types of Institutions</inlineHelpText>
        <label>Institution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Institution_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LD_USE_DnB_Optimize__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows this record to be regularly evaluated by Dun &amp; Bradstreet Optimizer</description>
        <inlineHelpText>Allows this record to be regularly evaluated by Dun &amp; Bradstreet Optimizer</inlineHelpText>
        <label>Allow D&amp;B Optimizer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The giving level, if applicable, for the organization</description>
        <label>Funding Level Designation</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Organizations</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSI_type__c</fullName>
        <label>MSI type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Selection</fullName>
                    <default>true</default>
                    <label>No Selection</label>
                </value>
                <value>
                    <fullName>HBCU</fullName>
                </value>
                <value>
                    <fullName>HSI</fullName>
                </value>
                <value>
                    <fullName>TCU</fullName>
                </value>
                <value>
                    <fullName>ITCCU</fullName>
                </value>
                <value>
                    <fullName>Nat-Hawaii</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minority_Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Minority Institution as identified by the Higher Education Act (HEA)</description>
        <inlineHelpText>Minority Institution as identified by the Higher Education Act (HEA)</inlineHelpText>
        <label>Minority Serving Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPO_Override_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that overwrote the NPO checkbox</description>
        <label>NPO Override By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPO_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPO_Override_Date__c</fullName>
        <description>Date NPO checkbox was overwritten</description>
        <label>NPO Override Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NPO_Override_Reason__c</fullName>
        <description>Reason for NPO override</description>
        <label>NPO Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPO_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was NPO checkbox overridden</description>
        <label>NPO Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates the account is a non-profit organization. This factors into price rules.</description>
        <inlineHelpText>Is the organization a non-profit organization (npo)</inlineHelpText>
        <label>AACR NPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Account_Email__c</fullName>
        <description>The default/primary email for the account.</description>
        <inlineHelpText>The default/primary email for the account.</inlineHelpText>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Annual_Engagement_Score__c</fullName>
        <description>Aggregates the Account&apos;s active engagement scores from it&apos;s badge records for the current year.</description>
        <inlineHelpText>Aggregates the Account&apos;s active engagement scores from it&apos;s badge records for the current year.</inlineHelpText>
        <label>Annual Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Disable_Badge_Flow_down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this field disables any inheritance of flow-down badges from the parent account.</description>
        <inlineHelpText>When checked, this field disables any inheritance of flow-down badges from the parent account.</inlineHelpText>
        <label>Disable Badge Flow-down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Lifetime_Engagement_Score__c</fullName>
        <description>Aggregates the Account&apos;s active engagement scores from it&apos;s badge records.</description>
        <inlineHelpText>Aggregates the Account&apos;s active engagement scores from it&apos;s badge records.</inlineHelpText>
        <label>Lifetime Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Outstanding_Credits__c</fullName>
        <description>** System Calculated ** The sum of the Credit Memo Balance Due field for all Credit Memos linked to this customer.</description>
        <inlineHelpText>** System Calculated ** The sum of the Credit Memo Balance Due field for all Credit Memos linked to this customer.</inlineHelpText>
        <label>Outstanding Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rules_Usages__c</fullName>
        <description>** SYSTEM ** JSON of price rules</description>
        <inlineHelpText>** SYSTEM ** JSON of price rules</inlineHelpText>
        <label>SYSTEM</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Contact for the Account will auto-populate on all Account Transactions, Payments, etc... by default.</description>
        <inlineHelpText>The Primary Contact for the Account will auto-populate on all Account Transactions, Payments, etc... by default.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Contact Accounts</relationshipLabel>
        <relationshipName>Primary_Contact_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Privacy_Settings__c</fullName>
        <description>**Defaults to private** This field sets the visibility settings when account search is enabled.
            Public: Any user in the system can search. Private: Searchable by authenticated users only. Unlisted: Can not be searched at all.</description>
        <inlineHelpText>**Defaults to private** This field sets the visibility settings when account search is enabled.
            Public: Any user in the system can search. Private: Searchable by authenticated users only. Unlisted: Can not be searched at all.</inlineHelpText>
        <label>Privacy Settings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>public</fullName>
                </value>
                <value>
                    <fullName>private</fullName>
                    <default>true</default>
                    <label>private</label>
                </value>
                <value>
                    <fullName>unlisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Institution Type overridden by user</description>
        <label>Override By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Date__c</fullName>
        <description>Date the institution type was overwritten</description>
        <label>Override Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stripe_Customer_Id__c</fullName>
        <label>Stripe Customer Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Actively_Prospecting_Corporate_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to denote an Org Account has a prospective corporate gift opportunity. 7/16/18 meeting requirement W-000065</description>
        <label>Actively Prospecting Corporate Gift</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Created_in_DonorDrive_By__c</fullName>
        <label>Created in DonorDrive By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Date_Entered__c</fullName>
        <label>Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Contact_Name__c</fullName>
        <label>DonorDrive Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Email__c</fullName>
        <label>DonorDrive Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_ID__c</fullName>
        <externalId>true</externalId>
        <label>DonorDrive ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Type__c</fullName>
        <label>DonorDrive Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Has_Extranet_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Extranet Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Modified_by_in_DonorDrive__c</fullName>
        <label>Last Modified by in DonorDrive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Modified_in_DonorDrive__c</fullName>
        <label>Last Modified in DonorDrive</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Needs_Merge_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Merge Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iMIS_ID__c</fullName>
        <description>Legacy ID from the iMIS system</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy ID from the iMIS system</inlineHelpText>
        <label>iMIS ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__One2OneContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for the Account, or the One2One contact for a One2One account.</description>
        <inlineHelpText>The primary contact for the Account, or the One2One contact for a One2One account.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEMIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden system field: do not change.  Updated by automatic processes.</description>
        <inlineHelpText>Indicates whether or not this Account is special for Contacts (Household, One-to-One, Individual) vs a normal Account.</inlineHelpText>
        <label>_SYSTEM: IsIndividual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEM_AccountType__c</fullName>
        <description>Hidden system field: do not change.  Updated by automatic processes.</description>
        <inlineHelpText>Indicates which Account Model this account is for: Household Account, One-to-One, or Individual (bucket).</inlineHelpText>
        <label>_SYSTEM: AccountType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>System field: do not change. Updated by automatic processes.</description>
        <inlineHelpText>Average won Opportunity amount related to this Account.  Updated automatically.</inlineHelpText>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <inlineHelpText>The sum of won Opportunity amounts in the Best Gift Year for this Account.</inlineHelpText>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <inlineHelpText>The year in which the largest total amount of won Opportunities related to this Account occurred.  See also Best Gift Year Total.</inlineHelpText>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The earliest won Opportunity (by Close Date) with amount greater than zero related to this Account.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formal_Greeting__c</fullName>
        <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Formal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__HouseholdPhone__c</fullName>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npo02__Informal_Greeting__c</fullName>
        <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Informal Greeting</label>
        <type>TextArea</type>
    </fields>
</CustomObject>